deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: lbbniu
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: httpserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - env:
            - name: VERSION
              value: "v1.0"
          name: httpserver
          image: lbbniu/httpserver:v1.0
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - 20s
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - mountPath: /data/logs
              name: log-httpserver
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /data/logs/httpserver
          name: log-httpserver

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: lbbniu
spec:
  ports:
    - nodePort: 8080
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: chat-api
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver-svc
  namespace: lbbniu
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: httpserver
  name: httpserver-ingress
  namespace: lbbniu
spec:
  rules:
    - host: httpserver.lbbniu.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver-svc
                port:
                  number: 80
